--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^1.0.3",
     "client-sessions": "^0.8.0",
     "express": "^4.16.3",
+    "express-fileupload": "^0.4.0",
     "gyp": "^0.5.0",
     "http": "0.0.0",
     "https": "^1.0.0",
