--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "client-sessions": "^0.8.0",
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
+    "formidable": "^1.2.1",
     "gyp": "^0.5.0",
     "http": "0.0.0",
     "https": "^1.0.0",
