--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "pem": "^1.12.4",
     "request": "^2.85.0",
     "uglify-js": "^3.3.20",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "passport": "^0.4.0"
   },
   "devDependencies": {},
   "repository": {
